--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 		<p>Lorem ipsum</p>
 	</div>
 	<div>
-		<h1 id="f2">Roses picture</h1>
+		<h1 id="f2">Roses pictures</h1>
 		<p>Lorem ipsum</p>
 	</div>
     <script type="text/javascript" src="./script.js">
